[workspace]
members = [".", "sea-orm-macros", "sea-orm-codegen"]

[package]
authors       = ["Chris Tsang <chris.2y3@outlook.com>"]
categories    = ["database"]
description   = "🐚 An async & dynamic ORM for Rust"
documentation = "https://docs.rs/sea-orm"
edition       = "2024"
homepage      = "https://www.sea-ql.org/SeaORM"
keywords      = ["async", "orm", "mysql", "postgres", "sqlite"]
license       = "MIT OR Apache-2.0"
name          = "sea-orm"
repository    = "https://github.com/SeaQL/sea-orm"
rust-version  = "1.85.0"
version       = "2.0.0-rc.30"

[package.metadata.docs.rs]
features = [
    "default",
    "sqlx-all",
    "mock",
    "proxy",
    "rbac",
    "schema-sync",
    "tracing-spans",
    "runtime-tokio-native-tls",
    "postgres-array",
    "postgres-vector",
    "sea-orm-internal",
]
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "sea_orm"
path = "src/lib.rs"

[dependencies]
async-stream = { version = "0.3", default-features = false }
async-trait = { version = "0.1", default-features = false }
bigdecimal = { version = "0.4", default-features = false, features = [
    "std",
], optional = true }
chrono = { version = "0.4.30", default-features = false, optional = true }
derive_more = { version = "2", features = ["debug"] }
futures-util = { version = "0.3", default-features = false, features = [
    "std",
] }
inventory = { version = "0.3", optional = true }
ipnetwork = { version = "0.20", default-features = false, optional = true }
itertools = "0.14.0"
log = { version = "0.4", default-features = false }
ouroboros = { version = "0.18", default-features = false }
pgvector = { version = "~0.4", default-features = false, optional = true }
rust_decimal = { version = "1", default-features = false, features = [
    "std",
], optional = true }
sea-orm-macros = { version = "~2.0.0-rc.30", path = "sea-orm-macros", default-features = false, features = [
    "async",
    "strum",
] }
sea-query = { version = "=1.0.0-rc.30", default-features = false, features = [
    "thread-safe",
    "hashable-value",
    "backend-mysql",
    "backend-postgres",
    "backend-sqlite",
    "sea-orm",
] }
sea-query-sqlx = { version = "=0.8.0-rc.14", default-features = false, optional = true }
sea-schema = { version = "0.17.0-rc.15", default-features = false, features = [
    "discovery",
    "writer",
    "probe",
], optional = true }
serde = { version = "1.0", default-features = false }
serde_json = { version = "1.0", default-features = false, optional = true }
sqlx = { version = "0.8.4", default-features = false, optional = true }
strum = { version = "0.27", default-features = false }
thiserror = { version = "2", default-features = false }
time = { version = "0.3.36", default-features = false, optional = true }
tracing = { version = "0.1", default-features = false, features = [
    "attributes",
    "log",
] }
url = { version = "2.2", default-features = false }
uuid = { version = "1", default-features = false, optional = true }

[dev-dependencies]
dotenv = "0.15"
maplit = { version = "1" }
pretty_assertions = { version = "0.7" }
sea-orm = { path = ".", features = [
    "mock",
    "debug-print",
    "tests-cfg",
    "postgres-array",
    "with-ipnetwork",
] }
smol = { version = "1.2" }
smol-potat = { version = "1.1" }
time = { version = "0.3.36", features = ["macros"] }
tokio = { version = "1.6", features = ["full"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }

[features]
debug-print = []
default = [
    "macros",
    "with-json",
    "with-chrono",
    "with-rust_decimal",
    "with-uuid",
    "with-time",
    "sqlite-use-returning-for-3_35",
]
entity-registry = ["inventory", "sea-orm-macros/entity-registry"]
json-array = [
    "postgres-array",
] # this does not actually enable sqlx-postgres, but only a few traits to support array in sea-query
macros = ["sea-orm-macros/derive"]
mariadb-use-returning = []
mock = []
postgres-array = [
    "sea-query/postgres-array",
    "sea-orm-macros/postgres-array",
    "sea-query-sqlx?/postgres-array",
]
postgres-use-serial-pk = ["sea-query/option-postgres-use-serial"]
postgres-vector = [
    "pgvector",
    "sea-query/postgres-vector",
    "sea-query-sqlx?/postgres-vector",
]
proxy = ["serde_json", "serde/derive"]
rbac = ["sea-query/audit", "macros"]
runtime-async-std = ["sqlx?/runtime-async-std"]
runtime-async-std-native-tls = [
    "sqlx?/runtime-async-std-native-tls",
    "runtime-async-std",
]
runtime-async-std-rustls = [
    "sqlx?/runtime-async-std-rustls",
    "runtime-async-std",
]
runtime-tokio = ["sqlx?/runtime-tokio"]
runtime-tokio-native-tls = ["sqlx?/runtime-tokio-native-tls", "runtime-tokio"]
runtime-tokio-rustls = ["sqlx?/runtime-tokio-rustls", "runtime-tokio"]
rusqlite = []
schema-sync = ["sea-schema"]
sea-orm-internal = []
seaography = ["sea-orm-macros/seaography"]
sqlite-no-row-value-before-3_15 = []
sqlite-use-returning-for-3_35 = []
sqlx-all = ["sqlx-mysql", "sqlx-postgres", "sqlx-sqlite"]
sqlx-dep = ["sqlx"]
sqlx-mysql = [
    "sqlx-dep",
    "sea-query-sqlx/sqlx-mysql",
    "sea-schema/sqlx-mysql",
]
sqlx-postgres = [
    "sqlx-dep",
    "sea-query-sqlx/sqlx-postgres",
    "postgres-array",
    "sea-schema/sqlx-postgres",
]
sqlx-sqlite = [
    "sqlx-dep",
    "sea-query-sqlx/sqlx-sqlite",
    "sea-schema/sqlx-sqlite",
]
sync = []
tests-cfg = ["serde/derive"]
tests-features = ["default", "rbac", "schema-sync", "with-bigdecimal"]
tracing-spans = []
with-bigdecimal = [
    "bigdecimal",
    "sea-query/with-bigdecimal",
    "sea-query-sqlx?/with-bigdecimal",
]
with-chrono = [
    "chrono",
    "sea-query/with-chrono",
    "sea-query-sqlx?/with-chrono",
]
with-ipnetwork = [
    "ipnetwork",
    "sea-query/with-ipnetwork",
    "sea-query-sqlx?/with-ipnetwork",
]
with-json = [
    "serde_json",
    "sea-query/with-json",
    "sea-orm-macros/with-json",
    "chrono?/serde",
    "rust_decimal?/serde",
    "bigdecimal?/serde",
    "uuid?/serde",
    "time?/serde",
    "pgvector?/serde",
    "sea-query-sqlx?/with-json",
]
with-rust_decimal = [
    "rust_decimal",
    "sea-query/with-rust_decimal",
    "sea-query-sqlx?/with-rust_decimal",
]
with-time = ["time", "sea-query/with-time", "sea-query-sqlx?/with-time"]
with-uuid = ["uuid", "sea-query/with-uuid", "sea-query-sqlx?/with-uuid"]

# This allows us to develop using a local version of sea-query
[patch.crates-io]
# sea-query = { path = "../sea-query" }
# sea-query = { git = "https://github.com/SeaQL/sea-query", branch = "master" }
