[workspace]
# A separate workspace

[package]
name = "sea-orm-cli"
version = "2.0.0-rc.5"
authors = [
    "Chris Tsang <chris.2y3@outlook.com>",
    "Billy Chan <ccw.billy.123@gmail.com>",
]
edition = "2024"
description = "Command line utility for SeaORM"
license = "MIT OR Apache-2.0"
homepage = "https://www.sea-ql.org/SeaORM"
documentation = "https://docs.rs/sea-orm"
repository = "https://github.com/SeaQL/sea-orm"
categories = ["database"]
keywords = ["async", "orm", "mysql", "postgres", "sqlite"]
default-run = "sea-orm-cli"
rust-version = "1.85.0"

[lib]
name = "sea_orm_cli"
path = "src/lib.rs"

[[bin]]
name = "sea-orm-cli"
path = "src/bin/main.rs"
required-features = ["cli", "codegen"]

[[bin]]
name = "sea"
path = "src/bin/sea.rs"
required-features = ["cli", "codegen"]

[dependencies]
clap = { version = "4.3", features = ["env", "derive"], optional = true }
dotenvy = { version = "0.15", default-features = false, optional = true }
async-std = { version = "1.9", default-features = false, features = ["attributes", "tokio1"], optional = true }
sea-orm-codegen = { version = "=2.0.0-rc.5", path = "../sea-orm-codegen", default-features = false, optional = true }
sea-schema = { version = "0.17.0-rc.1", default-features = false, features = ["discovery", "writer", "probe"], optional = true }
sqlx = { version = "0.8.4", default-features = false, optional = true }
tracing-subscriber = { version = "0.3.17", default-features = false, features = ["env-filter", "fmt"] }
tracing = { version = "0.1", default-features = false }
url = { version = "2.2", default-features = false }
chrono = { version = "0.4.20", default-features = false, features = ["clock"] }
regex = { version = "1.11.2" }
glob = { version = "0.3", default-features = false }

[dev-dependencies]
smol = "1.2.5"

[features]
default = ["codegen", "sqlx-mysql", "sqlx-postgres", "sqlx-sqlite", "runtime-async-std-native-tls", "async-std"]
codegen = ["cli", "sqlx", "sea-schema", "sea-orm-codegen"]
cli = ["clap", "dotenvy"]
sqlx-mysql = ["sqlx?/sqlx-mysql", "sea-schema?/sqlx-mysql", "sea-schema?/mysql"]
sqlx-postgres = ["sqlx?/sqlx-postgres", "sea-schema?/sqlx-postgres", "sea-schema?/postgres"]
sqlx-sqlite = ["sqlx?/sqlx-sqlite", "sea-schema?/sqlx-sqlite", "sea-schema?/sqlite"]
postgres-vector = ["sea-schema/postgres-vector"]
runtime-async-std = ["sqlx?/runtime-async-std", "sea-schema?/runtime-async-std"]
runtime-tokio = ["sqlx?/runtime-tokio", "sea-schema?/runtime-tokio"]
runtime-async-std-native-tls = ["sqlx?/runtime-async-std-native-tls", "sea-schema?/runtime-async-std-native-tls"]
runtime-tokio-native-tls = ["sqlx?/runtime-tokio-native-tls", "sea-schema?/runtime-tokio-native-tls"]
runtime-async-std-rustls = ["sqlx?/runtime-async-std-rustls", "sea-schema?/runtime-async-std-rustls"]
runtime-tokio-rustls = ["sqlx?/runtime-tokio-rustls", "sea-schema?/runtime-tokio-rustls"]

# This allows us to develop using an overridden version of sea-query
[patch.crates-io]
# sea-query = { path = "../sea-query" }
sea-query = { git = "https://github.com/SeaQL/sea-query", branch = "master" }
